--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Lär dig kantonesiska med interaktiva övningar" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/120.png" />
+		<link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/152.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/180.png" />
 		<!-- Google Fonts - Open Sans -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
